stryker/force-app/main/default/objects/Points_Table__c/Points_Table__c.object-meta.xml
<CustomObject>
    <label>Points Table</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Points Table</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>