stryker/force-app/main/default/objects/Points_Table__c/fields/p_id__c.field-meta.xml
<CustomField>
    <fullName>p_id__c</fullName>
    <externalId>true</externalId>
    <label>p_id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>