stryker/force-app/main/default/objects/Points_Table__c/fields/Total_Matches__c.field-meta.xml
<CustomField>
    <fullName>Total_Matches__c</fullName>
    <label>Total Matches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>