stryker/force-app/main/default/objects/Points_Table__c/fields/Won_matches__c.field-meta.xml
<CustomField>
    <fullName>Won_matches__c</fullName>
    <label>Won matches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>