stryker/force-app/main/default/objects/Points_Table__c/listViews/Top_4_TEAMS.listView-meta.xml
<ListView>
    <fullName>Top_4_TEAMS</fullName>
    <columns>NAME</columns>
    <columns>Points__c</columns>
    <columns>Won_matches__c</columns>
    <columns>Loss_matches__c</columns>
    <columns>Total_Matches__c</columns>
    <columns>Team_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team_Name__c</field>
        <operation>greaterThan</operation>
        <value>10</value>
    </filters>
    <label>Top-4 TEAMS</label>
</ListView>